Test: Add tests for Calculator methods in main